# LTI-Learning-toolsinteroperability

./: .env.examlple  .env.example  .gitignore  README.md  docker-compose.moodle.yml  docker-compose.yml  pyproject.toml  test_lti_launch.html
app/: main.py
app/api/: jwks.py  platforms.py
app/api/lti/: launch.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: platform.py  user.py
app/schemas/: lti.py  platform.py
app/services/: lti_service.py
